# RESTaurant-cli

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
examples/: example.rest.yml  github.rest.yml  jsonplaceholder.rest.yml  openweather.rest.yml
examples/tests/: secrets.rest.yml
resources/: example.rest.yml  github.rest.yml
src/restaurant/: __main__.py  schema.py
src/rqstr/: __main__.py  const.py  schema.py
src/rqstr/schema/: asserts.py  auth.py  output.py  request.py
test/: test_collection__basics.py  test_request__basics.py
